--- a/miniprogram/pages/admin/home/home.wxss
+++ b/miniprogram/pages/admin/home/home.wxss
@@ -1,1 +1,15 @@
 /* miniprogram/pages/admin/home/home.wxss */
+@import '../../../vendor/meMenu/index.wxss';
+@import '../../../vendor/footer/index.wxss';
+
+.home-container {
+  width: 100%;
+  height: 100vh;
+  background: #A5D63F;
+}
+
+.contant {
+  margin: 30rpx 40rpx;
+  /* border: 1px solid #000; */
+  background:#FFFFF0;
+}
