--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,1 +1,51 @@
 /* miniprogram/pages/index/index.wxss */
+.header-container {
+  width: 100%;
+  /* border: 1px solid #000; */
+}
+
+.lunbo-swiper {
+  height: 360rpx;
+  margin: 20rpx;
+  border-radius: 10rpx;
+  /* border: 1px solid #000; */
+}
+
+.lunbo-swiper .pic {
+  width: 100%;
+  height: 100%;
+  border-radius: 10rpx;
+}
+
+.swiper-desc {
+  margin-top: -100rpx;
+  text-align: center;
+  color: #ffffff;
+  font-size: 30rpx;
+  /* font-weight: bold; */
+}
+
+.search-container {
+  background: #eeeeee;
+  padding: 15rpx;
+}
+
+.search-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #ffffff;
+  padding: 10rpx 20rpx;
+  border-radius: 50rpx;
+  font-size: 24rpx;
+  color: #bfbfbf;
+}
+
+.search-icon {
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.notice-swiper {
+  height: 80rpx;
+}
