--- a/miniprogram/components/articleInfo/articleInfo.wxss
+++ b/miniprogram/components/articleInfo/articleInfo.wxss
@@ -31,6 +31,12 @@
   text-align: center;
   color: #ffffff;
   /* font-weight: bold; */
+  padding: 0 20rpx;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;	/* 控制显示几行 */
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .article-desc {
