--- a/miniprogram/pages/me/me.wxml
+++ b/miniprogram/pages/me/me.wxml
@@ -100,7 +100,7 @@
 		<template
 		 is="menuItem"
 		 data="{{item: menuItems.admin, arrowSrc: arrowSrc}}"
-		 wx:if="{{!userInfo.isAdmin}}"
+		 wx:if="{{userInfo.isAdmin}}"
 		></template>
 	</view>
 
